<resources>
    <string name="app_name">NutriScan</string>
    <string name="info_page_1"><![CDATA[The purpose of this app is to provide an intuitive interface for users to get a better understanding of the information on nutrition labels. The rating system used is from standards sets by the Department of Health & Social Care in the United Kingdom. Red, orange, and green indicate high, medium, and low amounts of the nutrient respectively. ]]></string>
    <string name="info_page_2">Percent daily (%DV) values, with the exception of the energy quantity, are based on a 2,000 calorie diet for females and a 2,500 calorie diet for males. The energy %DV will be calculated per user if additional information is provided. This app uses the Revised Harris-Benedict equation to calculate Basal Metabolic Rate.</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="user_weight_hint">Weight (lbs) ...</string>
    <string name="user_age">Age ...</string>
    <string name="user_height_ft">Height (ft) ...</string>
    <string name="user_height_in">Height (in) ...</string>
    <string name="update_settings">Update Settings</string>
    <string name="settings_title">Fill in details to get custom required calories / day value</string>
    <string name="login_title">Welcome to NutriScan!</string>
    <string name="login_email_hint">Email ...</string>
    <string name="login_pwd_hint">Password ...</string>
    <string name="login_signin_btn">Sign In</string>
    <string name="login_createacct_btn">Create Account</string>
    <string name="main_title">Enter UPC Code or Scan Barcode</string>
    <string name="main_upcCode_hint">UPC code ...</string>
    <string name="main_submit_btn">Submit UPC</string>
    <string name="main_scan_btn">Scan Barcode</string>
    <string name="newuser_title">Enter Your Information</string>
    <string name="newuser_fname_hint">First Name ...</string>
    <string name="newuser_lname_hint">Last Name ...</string>
    <string name="newuser_email_hint">Email ...</string>
    <string name="newuser_password_hint">Password ...</string>
    <string name="newuser_pwdConfirm_hint">Confirm Password ...</string>
    <string name="newUser_createAct_btn">Create Account</string>
    <string name="user_profile_img">user profile</string>
    <string name="user_profile_revert_btn">Revert to Default</string>
    <string name="user_scans_title">Saved Scans</string>
    <string name="user_scans_no_scans">No scans</string>
    <string name="nutrient_item_default_title">test</string>
    <string name="nutrient_item_amt_default">amount</string>
    <string name="scan_item_default_title">test</string>
    <string name="user_profile_update_btn">Update Settings</string>
    <string name="user_scans_new_scan_btn">Scan New Product</string>
    <string name="product_add_scan_btn">Scan New Product</string>
    <string name="product_note_text">Note: nutrient values are per 100 g</string>
    <string name="energy_desc">The amount of energy (measured in calories / kilojoules) that this product will give you per serving or 100 grams. Your target daily calorie intake depends on age, size, level of exercise, among other factors.  </string>
    <string name="sat_fat_desc">Saturated fats are often come from animals (meat, dairy, and some plants). Too much saturated fat leads to increased cholesterol which can put you at higher risk for heart disease and stroke.</string>
    <string name="sugar_desc">This value includes sugars naturally found in milk, fruit, and vegetables as well as artificial sources of sugar. Naturally found sugars are essential. Read the ingredient list to get a sense of which sugars are added. These sugars are called free sugars. Some examples are the following: cane sugar, honey, brown sugar, high-fructose corn syrup, fruit juice concentrate/purées, corn syrup, fructose, and sucrose.</string>
    <string name="sodium_desc">Salt levels to should be kept to a minimum as much as possible. A diet high in salt can caused raised blood pressure which, in turn, increases the risk of heart disease and stroke. Sodium and salt are not the same. Be aware that some nutrition labels only report the amount of sodium. To cut down on salt intake, eat less high-salt foods like pickles, olives, soy sauce, cheese, and ham for example. Foods like pasta, bread, and soups are often also high in salt. However levels differ across brands.</string>
    <string name="fat_desc">Fat is both a source for fatty acids as well as how our bodies absorb vitamins A, D, and E. Two main two types of fat are saturated and unsaturated. For more information on saturated fat, press the Fatty Acids label below. Unsaturated fat is typically liquid at room temperature. Plant oils, nuts, avocados, and some fish are examples of foods high in unsaturated fat. Unsaturated fat can help lower bad types of cholesterol.</string>
    <string-array name="exercise_amount">
        <item>Basal Metabolic Rate (Resting)</item>
        <item>Sedentary - Little to no exercise</item>
        <item>Lightly Active (1–3 days per week)</item>
        <item>Moderately Active (3–5 days per week)</item>
        <item>Very Active (6–7 days per week)</item>
        <item>Extra Active (twice or more /day)</item>
    </string-array>
</resources>
